# robotics_v1

./: .gitignore
install/: local_setup.sh  setup.sh
install/cmake_helpers/share/cmake_helpers/: package.sh
install/game_engine/share/game_engine/: local_setup.sh  package.sh
install/manager_utils/share/manager_utils/: local_setup.sh  package.sh
install/resource_builder/share/resource_builder/: package.sh
install/resource_utils/share/resource_utils/: package.sh
install/robo_cleaner_common/share/robo_cleaner_common/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robo_cleaner_gui/lib/robo_cleaner_gui/: robo_cleaner_gui
install/robo_cleaner_gui/share/robo_cleaner_gui/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robo_cleaner_interfaces/share/robo_cleaner_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robo_collector_bringup/share/robo_collector_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  (+4 more)
log/: latest_build  latest_list
src/robo_collector/robo_collector_common/: CMakeLists.txt
src/robo_collector_bringup/: CMakeLists.txt
src/robo_collector_bringup/launch/: robo_collector_app.launch.py
src/robo_miner/robo_miner_controller/: CMakeLists.txt  package.xml
src/robo_miner/robo_miner_controller/include/: MovementController.h  data_struct.h
src/robo_miner/robo_miner_controller/src/: MovementController.cpp  data_struct.c  data_struct.cpp  main.cpp
src/robo_miner_bringup/: CMakeLists.txt  package.xml
src/robo_miner_bringup/launch/: robo_miner_app.launch.py
(+1138 files in other folders)
